# the-kidnapper

./: .gitignore  Cargo.toml  Makefile  gen_rsa_keypair.sh  prepare_payload_windows.sh
some_target_dir/root_folder/: some_text.txt
src/decrypt/: main.rs
src/encrypt/: main.rs
